<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/violet"
    tools:context=".activities.PhotoScanner">

    <Toolbar
        android:id="@+id/toolBar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:elevation="0dp"
        android:navigationIcon="@drawable/ic_chevron_left_24"
        android:title="@string/title_photo_scanner_activity"
        android:titleTextColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/pickedImage"
        android:layout_width="400dp"
        android:layout_height="400dp"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolBar" />

    <TextView
        android:id="@+id/btnScan"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/form_button"
        android:elevation="5dp"
        android:gravity="center_vertical|center_horizontal"
        android:paddingHorizontal="20dp"
        android:paddingVertical="7dp"
        android:text="@string/btn_scan_photo"
        android:textColor="@color/dodger_blue"
        android:textSize="22sp"
        app:layout_constraintBottom_toTopOf="@+id/btnChooseAnImg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/btnChooseAnImg"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginBottom="15dp"
        android:layout_marginHorizontal="20dp"
        android:background="@drawable/form_button"
        android:elevation="5dp"
        android:gravity="center_vertical|center_horizontal"
        android:paddingHorizontal="20dp"
        android:paddingVertical="7dp"
        android:text="@string/btn_choose_another_image"
        android:textColor="@color/dodger_blue"
        android:textSize="22sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>